Adding Login and register Pages And fix some issues in server
