# server/routes/userFetchs.js
@@ -18,6 +18,16 @@ userRoutes.get('/api/user/:id', async(req, res) => {
         res.status(500).json(error);
     }
 });
+userRoutes.get('/api/userProviders/:id', async(req, res) => {
+    try {
+        const { id } = req.params;
+        const user = await DiscordUser.findOne({discordId: id}) || await GoogleUser.findOne({googleId: id});
+        if(!user) return res.status(400).json({ message: "User Not Found" });
+        res.status(200).json(user);
+    } catch (error) {
+        res.status(500).json(error);
+    }
+});
 
 
 userRoutes.put('/api/user/addFriend', async(req, res) => {
